<resources>
    <string name="app_name">FarmerEats</string>
    <string name="login"><u>Login</u></string>
    <string name="page1sec">Sell your farm fresh products directly to consumers, cutting out the middleman and reducing emissions of the global supply chain.</string>
    <string name="quality">Quality</string>
    <string name="convenient">Convenient</string>
    <string name="local">Local</string>
    <string name="page3sec">We love the earth and know you do too! Join us in reducing our local carbon footprint one order at a time. </string>
    <string name="page2sec">Our team of delivery drivers will make sure your orders are picked up on time and promptly delivered to your customers. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="new_here">New here?</string>
    <string name="create_account">Create account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forget">Forget?</string>
    <string name="login_nounderline">Login</string>
    <string name="or_login_with">or login with</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_your_password">Remember your password?</string>
    <string name="send_code">Send Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="state">State</string>
    <string name="Pcontinue">Continue</string>
    <string name="client_id">1061799043759-10i2i1cduiju1dtatjutjjt1v5qpi8jd.apps.googleusercontent.com</string>
    <string name="facebook_app_id">249671611574599</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="signup_4_of_4">Signup 4 of 4</string>
    <string name="business_hours">Business Hours</string>
    <string name="choose_the_hours_your_farm_is_open_for_pickups_this_will_allow_customers_to_order_deliveries">Choose the hours your farm is open for pickups. This will allow customers to order deliveries.</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="th">Th</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="su">Su</string>
    <string name="_8_00am_10_00am">8:00am - 10:00am</string>
    <string name="_10_00am_1_00pm">10:00am - 1:00pm</string>
    <string name="_1_00pm_4_00pm">1:00pm - 4:00pm</string>
    <string name="_4_00pm_7_00pm">4:00pm - 7:00pm</string>
    <string name="_7_00pm_10_00pm">7:00pm - 10:00pm</string>
    <string name="signup">Signup</string>
    <string name="you_re_all_done">You’re all done!</string>
    <string name="hang_tight_we_are_currently_reviewing_your_account_and_will_follow_up_with_you_in_2_3_business_days_in_the_meantime_you_can_setup_your_inventory">Hang tight! We are currently reviewing your account and will follow up with you in 2-3 business days. In the meantime, you can setup your inventory.</string>
    <string name="got_it">Got it!</string>
    <string name="join_the_movement">Join the movement!</string>
    <string name="signup_2_of_4">Signup 2 of 4</string>
    <string name="farm_info">Farm Info</string>
    <string name="business_name">Business Name</string>
    <string name="informal_name">Informal Name</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="enter_zipcode">Enter Zipcode</string>
    <string name="hey_user_that_is_home_fragment">Hey,User That is Home Fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="signup_1_of_4">Signup 1 of 4</string>
    <string name="welcome">Welcome!</string>
    <string name="full_name">Full Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password_did_not_match">Password Did Not Match!</string>
    <string name="signup_3_of_4">Signup 3 of 4</string>
    <string name="verification">Verification</string>
    <string name="attached_proof_of_department_of_agriculture_registrations_i_e_florida_fresh_usda_approved_usda_organic">Attached proof of Department of Agriculture registrations i.e. Florida Fresh, USDA Approved, USDA Organic</string>
    <string name="attach_proof_of_registration">Attach proof of registration</string>
    <string name="verify_otp">Verify OTP</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>