<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".forgetPassword.ForgetPasswordFragment">

        <TextView
            android:id="@+id/main_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:fontFamily="@font/bevietnam_regular"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/forget_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:fontFamily="@font/bevietnam_regular"
            android:text="@string/forgot_password"
            android:textColor="@color/light_text"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_head" />

        <TextView
            android:id="@+id/remember_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/bevietnam_regular"
            android:text="@string/remember_your_password"
            android:textColor="@color/blackLight"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forget_password_text" />

        <TextView
            android:id="@+id/login_btn_co"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/text_btn_click"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/bevietnam_regular"
            android:text="@string/login_nounderline"
            android:textColor="@color/redBg"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toEndOf="@id/remember_text"
            app:layout_constraintTop_toBottomOf="@id/forget_password_text" />

        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/text_bg"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="8dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/_12sdp"
            android:scrollbars="none"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/blackLight"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@+id/remember_text"
            app:layout_constraintTop_toBottomOf="@id/remember_text" />

        <TextView
            android:id="@+id/enter_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:fontFamily="@font/bevietnam_regular"
            android:textColor="@color/redBg"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_edit_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_code_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:backgroundTint="@color/redBg"
            android:fontFamily="@font/bevietnam_regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/send_code"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>