<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".signup.SignupFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/main_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bevietnam_regular"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:fontFamily="@font/bevietnam_regular"
                android:text="@string/signup_1_of_4"
                android:textColor="@color/blackLight"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toTopOf="@id/welcome_text"
                app:layout_constraintStart_toStartOf="@id/main_head" />

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_60sdp"
                android:fontFamily="@font/bevietnam_regular"
                android:text="@string/welcome"
                android:textColor="@color/light_text"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_head" />

            <LinearLayout
                android:id="@+id/btn_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/welcome_text">

                <Button
                    android:id="@+id/google_login_btn"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/_15sdp"
                    app:icon="@drawable/ic_google"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="@null"
                    app:strokeColor="@color/strokeColor" />

                <Button
                    android:id="@+id/apple_login_btn"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_15sdp"
                    app:icon="@drawable/ic_apple"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="@null"
                    app:strokeColor="@color/strokeColor" />

                <Button
                    android:id="@+id/facebook_login_btn"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_15sdp"
                    app:icon="@drawable/ic_facebook"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="@null"
                    app:strokeColor="@color/strokeColor" />
            </LinearLayout>

            <TextView
                android:id="@+id/orlogin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/bevietnam_regular"
                android:text="@string/or_login_with"
                android:textColor="@color/blackLight"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_linear" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/text_bg"
                android:drawableStart="@drawable/ic_profile"
                android:drawablePadding="8dp"
                android:hint="@string/full_name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:padding="@dimen/_12sdp"
                android:scrollbars="none"
                android:textColor="@color/black"
                android:textColorHint="@color/blackLight"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/orlogin_text" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/text_bg"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/_12sdp"
                android:scrollbars="none"
                android:textColor="@color/black"
                android:textColorHint="@color/blackLight"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/text_bg"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="@dimen/_12sdp"
                android:scrollbars="none"
                android:textColor="@color/black"
                android:textColorHint="@color/blackLight"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/text_bg"
                android:drawableStart="@drawable/ic_password_new"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_12sdp"
                android:scrollbars="none"
                android:textColor="@color/black"
                android:textColorHint="@color/blackLight"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/phone_edit_text" />

            <EditText
                android:id="@+id/re_enter_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/text_bg"
                android:drawableStart="@drawable/ic_password_new"
                android:drawablePadding="8dp"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:padding="@dimen/_12sdp"
                android:scrollbars="none"
                android:textColor="@color/black"
                android:textColorHint="@color/blackLight"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/password_edit_text"
                tools:layout_editor_absoluteX="19dp" />

            <TextView
                android:id="@+id/password_notmatch_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bevietnam_regular"
                android:text="@string/password_did_not_match"
                android:textColor="@color/redBg"
                android:textSize="@dimen/_8ssp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/re_enter_password_edit_text" />

            <TextView
                android:id="@+id/relogin_text_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_90sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/text_btn_click"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/bevietnam_regular"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/big_Continue_btn"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:backgroundTint="@color/redBg"
                android:fontFamily="@font/bevietnam_regular"
                android:padding="@dimen/_10sdp"
                android:text="@string/Pcontinue"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
